--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   global_configuration: ^1.6.0
-  flutter_svg: ^0.19.0
+#  flutter_svg: ^0.19.0
   auto_size_text: ^2.1.0
+  time: ^1.3.0
+
+
 
 
 
